--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -607,6 +607,55 @@ div[id ^= "mini-panel-partner_in_country"]{
 }
 /*END COUNTRY PROFILE*/
 
+/* EU LEVEL COUNTRY
+*************************************************/
+.page-country-profile-eu{
+	.country-partners-container{
+		.country-partner-wrapper{
+			div[id^="mini-panel-partner_in_country"]{
+				margin: 0px 25px;
+				.panels-flexible-row-new-1{
+					border-bottom: none;
+				}
+				.partner-contact-container{
+					margin-top: 0;
+					min-height: inherit;
+				}
+				.panels-flexible-row{
+					.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
+						padding-top: 20px;
+    					border-bottom: none;
+    					.partner-image-container{
+							img{
+								max-width: 150px;
+							}
+    					}
+    					.partner-text-container{
+							h2{
+								font-size: @font-size1-6;
+							}
+    					}
+					}
+					.panels-flexible-row-new-1-inside.panels-flexible-row-inside-last{
+						.partner-contact-container{
+							border-bottom: 0px;
+						}
+						.partner-contact-container,
+						.partner-social-container,
+						.partner-colaborators-container,
+						.partner-text2-container {
+							min-height: inherit;
+							margin-top: 0px;
+							border-bottom: none;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+/*END EU LEVEL COUNTRY*/
+
 /*OIRA TOOLS, PROMOTIONAL RESOURCES, GENERAL SEARCH (FILTERS)
 **************************************************************************/
 .page-oira-tools,
@@ -1018,6 +1067,17 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 			}
 		}
 	}
+	.quicktabs-tabs-container{
+		margin-top: 30px;
+		.quicktabs-tabs {
+			li{
+				a{
+					padding: 15px 20px 15px 20px;
+					margin: 0px;
+				}
+			}
+		}
+	}
 	.quicktabs-tabpage {
 		.hwc-alphabet-container{
 			margin-right: 0px;
@@ -1027,8 +1087,9 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 			background-color: @color-primary-dark;
 			padding: 15px;
 			position: absolute;
-			top: 0px;
-			left: 50px;
+			top: 30px;
+			left: 65px;
+			overflow: hidden;
 			display: none;
 			.hwc-char-link{
 				margin: 0px 0px;
@@ -1180,5 +1241,97 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 @media only screen and (min-width: 768px) and (max-width : 814px) {
 	.quicktabs-tabs-container{
 		left: 2%;
+	}
+}
+
+
+//this is only to adjust filters to the correct position
+
+@media only screen and (min-width: 976px) and (max-width : 991px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 13%;
+		}
+	}
+}
+@media only screen and (min-width: 954px) and (max-width : 975px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 12%;
+		}
+	}
+}
+@media only screen and (min-width: 930px) and (max-width : 953px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 11%;
+		}
+	}
+}
+@media only screen and (min-width: 908px) and (max-width : 929px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 10%;
+		}
+	}
+}
+@media only screen and (min-width: 888px) and (max-width : 907px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 9%;
+		}
+	}
+}
+@media only screen and (min-width: 869px) and (max-width : 887px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 8%;
+		}
+	}
+}
+@media only screen and (min-width: 850px) and (max-width : 868px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 7%;
+		}
+	}
+}
+@media only screen and (min-width: 833px) and (max-width : 849px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 6%;
+		}
+	}
+}
+@media only screen and (min-width: 815px) and (max-width : 832px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 5%;
+		}
+	}
+}
+@media only screen and (min-width: 788px) and (max-width : 814px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 4%;
+		}
+	}
+}
+@media only screen and (min-width: 768px) and (max-width : 787px) {
+	.page-sectorial-social-partners,
+	.page-national-partners{
+		.quicktabs-tabs-container{
+			left: 2%;
+		}
 	}
 }
