--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -10044,9 +10044,6 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
 .page-country-profile-eu .country-partners-container * {
   box-sizing: border-box;
 }
-.page-country-profile-eu .country-partners-container .country-partner-wrapper:nth-child(2n+1) {
-  border-right: 2px solid #786586;
-}
 .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] {
   margin: 0px 40px;
   cursor: pointer;
@@ -10059,7 +10056,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   padding-bottom: 0px;
 }
 .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first {
-  padding-top: 40px;
+  padding-top: 30px;
   padding-bottom: 0px;
   margin-bottom: 0px;
 }
@@ -10079,8 +10076,8 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  min-height: 40px;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
+  font-size: 1.8em;
 }
 .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last {
   display: none;
@@ -10873,6 +10870,40 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
     border-bottom: 2px solid #786586;
   }
   /*END COUNTRY PROFILE*/
+  /* EU LEVEL COUNTRY
+*************************************************/
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] {
+    margin: 0px 25px;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-new-1 {
+    border-bottom: none;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .partner-contact-container {
+    margin-top: 0;
+    min-height: inherit;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first {
+    padding-top: 20px;
+    border-bottom: none;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-image-container img {
+    max-width: 150px;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-text-container h2 {
+    font-size: 1.6em;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container {
+    border-bottom: 0px;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container {
+    min-height: inherit;
+    margin-top: 0px;
+    border-bottom: none;
+  }
+  /*END EU LEVEL COUNTRY*/
   /*OIRA TOOLS, PROMOTIONAL RESOURCES, GENERAL SEARCH (FILTERS)
 **************************************************************************/
   .page-oira-tools .panels-flexible-row-new-1,
@@ -11306,6 +11337,17 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   .page-irat-network .quicktabs-tabs li a {
     border-left: none;
   }
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container,
+  .page-irat-network .quicktabs-tabs-container {
+    margin-top: 30px;
+  }
+  .page-sectorial-social-partners .quicktabs-tabs-container .quicktabs-tabs li a,
+  .page-national-partners .quicktabs-tabs-container .quicktabs-tabs li a,
+  .page-irat-network .quicktabs-tabs-container .quicktabs-tabs li a {
+    padding: 15px 20px 15px 20px;
+    margin: 0px;
+  }
   .page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container,
   .page-national-partners .quicktabs-tabpage .hwc-alphabet-container,
   .page-irat-network .quicktabs-tabpage .hwc-alphabet-container {
@@ -11316,8 +11358,9 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
     background-color: #786586;
     padding: 15px;
     position: absolute;
-    top: 0px;
-    left: 50px;
+    top: 30px;
+    left: 65px;
+    overflow: hidden;
     display: none;
   }
   .page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container .hwc-char-link,
@@ -11484,6 +11527,72 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
 }
 @media only screen and (min-width: 768px) and (max-width: 814px) {
   .quicktabs-tabs-container {
+    left: 2%;
+  }
+}
+@media only screen and (min-width: 976px) and (max-width: 991px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 13%;
+  }
+}
+@media only screen and (min-width: 954px) and (max-width: 975px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 12%;
+  }
+}
+@media only screen and (min-width: 930px) and (max-width: 953px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 11%;
+  }
+}
+@media only screen and (min-width: 908px) and (max-width: 929px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 10%;
+  }
+}
+@media only screen and (min-width: 888px) and (max-width: 907px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 9%;
+  }
+}
+@media only screen and (min-width: 869px) and (max-width: 887px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 8%;
+  }
+}
+@media only screen and (min-width: 850px) and (max-width: 868px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 7%;
+  }
+}
+@media only screen and (min-width: 833px) and (max-width: 849px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 6%;
+  }
+}
+@media only screen and (min-width: 815px) and (max-width: 832px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 5%;
+  }
+}
+@media only screen and (min-width: 788px) and (max-width: 814px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
+    left: 4%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 787px) {
+  .page-sectorial-social-partners .quicktabs-tabs-container,
+  .page-national-partners .quicktabs-tabs-container {
     left: 2%;
   }
 }
@@ -12408,6 +12517,67 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
     margin-right: 0px !important;
   }
   /*END COUNTRY PROFILE*/
+  /* EU LEVEL COUNTRY
+*************************************************/
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper:nth-child(2n+1) {
+    border-right: none !important;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] {
+    margin: 0px 0px;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first {
+    padding-top: 30px;
+    border-bottom: none;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-image-container img {
+    max-width: 140px;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .partner-text-container h2 {
+    text-align: center !important;
+    font-size: 1.4em;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container {
+    border-bottom: 2px solid #786586;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-contact-information-partner > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-contact-information-partner > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-contact-information-partner > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-contact-information-partner > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-node-field-social-profile > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-node-field-social-profile > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-node-field-social-profile > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-node-field-social-profile > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-node-field-collaborator > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-node-field-collaborator > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-node-field-collaborator > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-node-field-collaborator > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-contact-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-social-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-colaborators-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content,
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-taxonomy-term-field-ncw-fp-link > .pane-content {
+    border-bottom: none;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container {
+    border-bottom: none;
+  }
+  .page-country-profile-eu .country-partners-container .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row .panels-flexible-row-new-1-inside.panels-flexible-row-inside-last .partner-text2-container .pane-content {
+    border-bottom: 2px solid #786586 !important;
+  }
+  .page-country-profile-eu .country-partners-container .active {
+    float: none;
+    clear: both;
+    position: inherit;
+    margin-right: 0px !important;
+  }
+  .page-country-profile-eu .country-partners-container .has-open-partner {
+    float: none;
+    border-left: none;
+    border-right: none !important;
+  }
+  /*END EU LEVEL COUNTRY*/
   /*PARTNER DETAIL PAGE
 **********************************/
   .node-type-partner #block-system-main > div > div {
@@ -12652,7 +12822,6 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   .page-national-partners .quicktabs-tabpage div[id^="hwc-char-"],
   .page-irat-network .quicktabs-tabpage div[id^="hwc-char-"] {
     padding: 15px 15px 0px 15px;
-    margin-top: 0px !important;
   }
   .page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group,
   .page-national-partners .quicktabs-tabpage .quicktabs-views-group,
@@ -13300,7 +13469,6 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   }
   .quicktabs-tabs-container ul.quicktabs-tabs.container > li a {
     margin: 0px !important;
-    padding: 15px !important;
   }
   .hwc-alphabet-container {
     margin-right: 15px !important;
@@ -13311,7 +13479,6 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
     position: inherit !important;
     display: none;
     margin-bottom: 15px;
-    max-width: 340px;
   }
   .hwc-alphabet-container .hwc-char-link {
     margin: 0px 0px;
