--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -3593,15 +3593,9 @@ div[id ^= "mini-panel-partner_in_country"]{
 			box-sizing: border-box;
 		}
 		.country-partner-wrapper:nth-child(2n+1){
-			border-right: 2px solid @color-primary-dark;
-		}
-		.country-partner-wrapper:last-child{
-			.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
-				//border-bottom: none;
-			}
+			//border-right: 2px solid @color-primary-dark;
 		}
 		.country-partner-wrapper{
-			
 			div[id^="mini-panel-partner_in_country"]{
 				margin: 0px 40px;
 				cursor: pointer;
@@ -3611,9 +3605,8 @@ div[id ^= "mini-panel-partner_in_country"]{
 				}
 				.panels-flexible-row{
 					padding-bottom: 0px;
-					
 					.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
-						padding-top: 40px;
+						padding-top: 30px;
     					padding-bottom: 0px;
     					margin-bottom: 0px;
     					.partner-image-container{
@@ -3631,8 +3624,8 @@ div[id ^= "mini-panel-partner_in_country"]{
 								white-space: nowrap;
 								text-overflow: ellipsis;
 								overflow: hidden;
-								min-height: 40px;
-								margin-bottom: 35px;
+								margin-bottom: 25px;
+								font-size: @font-size1-8;
 							}
     					}
 					}
