--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -18,7 +18,7 @@
 }
 
 body{
-	font-size: 16px !important;//testing al finalizar quitar el important
+	font-size: 16px;
 	color: @color-text-grey;
 }
 
