--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -268,7 +268,7 @@
 				padding-right: 15px;
     		}
     		li{
-    			float: initial;
+    			float: inherit;
     			//display: table-cell; //testing ie
     			display: inline-block;
     			//text-align: center;
@@ -316,6 +316,7 @@
     					border-bottom: 2px solid white;
     					padding-top: 5px;
     					padding-bottom: 5px;
+    					width: 100%;
     					&:hover{
 							background-color: darken(@color-see-more, 7);
     					}
