--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7170,7 +7170,8 @@ a.more-link:before {
 .col-md-10 {
   min-height: 0px;
 }
-.view-mode-search_result strong {
+.view-mode-search_result strong,
+.view-mode-teaser strong {
   background-color: yellow;
 }
 /*END estilos comunes
