--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -406,7 +406,7 @@ a.more-link{
 	min-height: 0px;
 }
 
-.view-mode-search_result{
+.view-mode-search_result, .view-mode-teaser{
 	strong{
 		background-color: yellow;
 	}
