--- a/docroot/sites/all/themes/oira_frontend/css/override.css
+++ b/docroot/sites/all/themes/oira_frontend/css/override.css
@@ -28,3 +28,7 @@ ul.nav > li.dropdown:hover ul.dropdown-menu {
 ul.nav li.dropdown ul.dropdown-menu {
     margin-top: 0;
 }
+
+#lang_dropdown_form_language label {
+    display: none;
+}
