--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -208,7 +208,11 @@ a.more-link{
 }
 
 /*Etiquetas azuler de pais e idioma*/
-.field.field-name-field-country, .field-type-language-field, .field-name-field-sector, .field-name-field-promotional-material-type {
+.field.field-name-field-country,
+.field-type-language-field,
+.field-name-field-sector,
+.field-name-field-promotional-material-type,
+.field-name-pr-language{
     background-color: #10b2e4;
     display: inline-block;
     color: white;
@@ -218,6 +222,9 @@ a.more-link{
     font-style: italic;
     margin-top: 1em;
     margin-right: 5px;
+    p{
+    	margin-bottom: 0px;
+    }
 }
 
 .field-name-field-publication-date, .field-type-datetime{
