--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -175,6 +175,12 @@
     					}
 					}
 				}
+				.input-group{
+					display: table;
+				}
+				.input-search-display {
+				    display: none;
+				}
 				
 			}
 		}
@@ -213,6 +219,9 @@
     			background-color: @color-icon-purple;
     			color: @color-white;
     			width: 190px !important;
+    			label{
+    				display: none;
+    			}
 			}
 		}
 	}
