--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -910,6 +910,7 @@
 @color-icon-purple: @color-primary-dark;
 @color-label: @color-menu;
 @color-see-more: @color-menu;
+@error-label: #5fd9ff;
 
 @color-text-grey: #58585a;
 @color-text-purple: #967ea7; //ya veremos si se cambia por el oscuro #967ea7
