--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -203,7 +203,7 @@ h1.page-header {
 		    		.views-field-field-image{
 		    			display: none !important;
 		    		}
-		    		.views-field-title-field{
+		    		.views-field-field-link{
 		    			background-color: inherit;
 		    			h2{
 		    				a{
