--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -339,7 +339,7 @@
 ****************************************************************/
 .front{
 	.panels-flexible-region-new-slider{
-		.views-field-title-field {
+		.views-field-field-link{
 		    position: inherit !important;
 		    width: 100% !important;
 		    background-color: @color-primary-dark;
@@ -388,6 +388,11 @@
 .page-what-is-new{
 	.panels-flexible-row-new-3{
 		.panels-flexible-region-new-latest_news{
+			.views-view-grid{
+				.row-2{
+					display: none;
+				}
+			}
 			.views-item-columns-container{
 				min-height: 297px;
 			}
