--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1636,7 +1636,7 @@ a.more-link{
 		}
 	}
 	.panels-flexible-row-new-1{
-		background-color: @color-background-light-purple; 
+		background-color: @color-background-light-purple;
 		padding-top: 17px;
 		margin-bottom: 20px;
 		.view-id-faqs{
@@ -1667,6 +1667,9 @@ a.more-link{
 					
 					margin-bottom: 25px;
 					color: @color-text-grey;
+					ul{
+						padding-left: 20px;
+					}
 					p, span, ul li{
 						font-family: "Roboto";
 						font-size: @font-size0-9 !important;
